--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
         values
     </string>
     <string name="get_started">Get Started</string>
+    <string name="not_sure">NOT SURE</string>
 </resources>
