--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hillary">Hillary</string>
     <string name="change_your_answer">Change your answer</string>
     <string name="agrees_with_you">Agrees with you</string>
+    <string name="next_question">NEXT QUESTION</string>
 </resources>
