--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="change_your_answer">Change your answer</string>
     <string name="agrees_with_you">Agrees with you</string>
     <string name="next_question">NEXT QUESTION</string>
+    <string name="show_results">SHOW RESULTS</string>
 </resources>
