--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="show_results">SHOW RESULTS</string>
     <string name="bernie_sanders">Bernie Sanders</string>
     <string name="hillary_clinton">Hillary Clinton</string>
+    <string name="your_best_match">YOUR BEST MATCH</string>
+    <string name="tap_to_continue">Tap to continue</string>
 </resources>
